testProxy_condor/logfiles/err_data0_Clu807467_0.err
input_line_12:2:3: error: use of undeclared identifier 'run_condor_job_Run3_wproxy'
 (run_condor_job_Run3_wproxy.C(0, 1, 2, 80, 200, 1, 1, 1, 0))
  ^
Error in <HandleInterpreterException>: Error evaluating expression (run_condor_job_Run3_wproxy.C(0, 1, 2, 80, 200, 1, 1, 1, 0))
Execution of your code was aborted.
